remote-k8s/improve-security/catalog.yaml
kind: Service
apiVersion: v1
metadata:
  name: catalog
  namespace: globoticket
  labels:
    app: catalog
spec:
  selector:
    app: catalog
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    name: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: globoticket
  labels:
    app: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: psgloboticketdavorin.azurecr.io/catalog
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "750m"
        ports:
        - containerPort: 80
        imagePullPolicy: Always
