remote-k8s/improve-security/ordering.yaml
kind: Service
apiVersion: v1
metadata:
  name: ordering
  namespace: globoticket
  labels:
    app: ordering
spec:
  selector:
    app: ordering
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordering
  namespace: globoticket
  labels:
    app: ordering
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordering
  template:
    metadata:
      namespace: globoticket
      labels:
        app: ordering
    spec:
      containers:
      - name: ordering
        image: psgloboticketdavorin.azurecr.io/ordering
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "750m"
        ports:
        - containerPort: 80
        imagePullPolicy: Always
